--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "react-intersection-observer": "^9.5.3",
     "tailwind-merge": "^2.2.0",
     "three": "^0.160.0"
+    "three": "^0.161.0"
+
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -89,5 +91,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+    "@types/three": "^0.155.0"
+
   }
 }
