--- a/package.json
+++ b/package.json
@@ -65,20 +65,20 @@
       "url": "na"
     }
   ],
-  "dependencies": {
-    "@heroicons/react": "^2.1.1",
-    "@react-three/drei": "^9.93.0",
-    "@react-three/fiber": "^8.15.13",
-    "clsx": "^2.1.0",
-    "framer-motion": "^10.17.12",
-    "next": "14.2.15",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.0.1",
-    "react-intersection-observer": "^9.5.3",
-    "tailwind-merge": "^2.2.0",
-    "three": "^0.161.0"
-  },
+"dependencies": {
+  "@react-three/drei": "^9.93.0",        // Ensure it's up-to-date
+  "@react-three/fiber": "^8.15.13",      // Ensure it's the right version
+  "clsx": "^2.1.0",
+  "framer-motion": "^10.17.12",
+  "next": "14.2.15",
+  "react": "^18",
+  "react-dom": "^18",
+  "react-icons": "^5.0.1",
+  "react-intersection-observer": "^9.5.3",
+  "tailwind-merge": "^2.2.0",
+  "three": "^0.161.0"                    // Ensure this version works with @react-three/fiber
+},
+
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
